# EmployeeAnalyticsHR

./: .gitignore  PrepareAnalyicsDummies.ipynb  dummy_generator.py  mysql_dummies_table.sql  psql_dummies_table.sql  pyproject.toml
src/: main.py  model.py  submit_job.py  train.py
